[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "probablity"
version = "0.1.0"
description = "Exploring the world of probability and statistics with Python."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "seaborn>=0.13.2",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

# [tool.ruff]
# # Enable linting and fixing for import sorting
# select = ["I"]  # I = isort (import sorting)
# fix = true      # Automatically apply fixes